@@ -135,6 +135,8 @@ sub _build_related_results {
 override 'execute' => sub {
   my $self = shift;
 
+  super();
+
   if( !$self->skip_markdups_metrics ){
     $self->_parse_markdups_metrics();
   }
