@@ -209,18 +209,19 @@ use_ok('npg_qc::autoqc::checks::qX_yield');
     position  => 4,
     qc_in     => 't/data/autoqc/090721_IL29_2549',
     id_run    => 2549, 
-                                                   );
-   lives_ok {$check->execute} 'no error when input not found';
+  );
+  throws_ok {$check->execute}
+    qr/Neither t\/data\/autoqc\/090721_IL29_2549\/2549_4_1\.fastqcheck nor t\/data\/autoqc\/090721_IL29_2549\/2549_4\.fastqcheck file found/,
+    'error when input not found';
 
-  my $e    = npg_qc::autoqc::checks::qX_yield->new(
+  $check = npg_qc::autoqc::checks::qX_yield->new(
     position    => 4,
     path        => 't/data/autoqc/090721_IL29_2549',
     id_run      => 2549,
     input_files => [],
-                                                  );
-   $e->result->comments(
-     q[Neither t/data/autoqc/090721_IL29_2549/2549_4_1.fastqcheck nor t/data/autoqc/090721_IL29_2549/2549_4.fastqcheck file found]);
-   is_deeply($check->result, $e->result, 'results when input not found');
+   );
+   throws_ok {$check->execute} qr/input_files array cannot be empty/,
+     'error if empty input_files array given';
 }
 
 1;
