@@ -17,6 +17,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
      Column type changed to mediumtext.
  - update Build.PL to make C programs only under precise
  - upstream_tags autoqc check: standardise access to the tracking database
+ - execute method of the parent autoqc check to error if input files do not exist
 
 release 64.6.3
  - update parsing of spatial filter stats in spatial_filter QC check
